# SegFace

./: pyproject.toml
network/models/: segface_celeb.py
segface/: __init__.py  inference.py
