[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segface"
version = "0.1.0"
description = "SegFace: Face Segmentation of Long-Tail Classes (AAAI 2025)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "timm>=0.4.12",
    "einops>=0.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["segface*", "network*", "loss*", "utils*"]
